source/stylesheets/page/_header.scss
/*------------------------------------*\
    # Page Header
\*------------------------------------*/

/*
 * [1]   Must force this because safari on Iphone is a stupid, ignorant, bad exexcuse for a browser....
 */


.site-header {
  display: flex;
  align-items: center;
  justify-content: left;

  position: absolute;
  width: 100%;
  @include breakpoint(medium) {
    border-bottom: 1px solid rgba(255, 255, 255, .3);
  }
//  min-height: rem-calc(70);                  /* [1] */
}

.site-nav {

  .nav__item a {

    padding: space(quarter);

    @include breakpoint(medium) {
      padding: space(base);
    }

    border-right: 1px solid rgba(255, 255, 255, .3);
    color: #fff;
    text-transform: uppercase;
  }

  .nav__item--active a,
  a:hover {
 // TODO
  }
}

.account {
}

